--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.5" />
+	<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
   </ItemGroup>
 
 </Project>
